Update Interactive VLF data miner.ipynb

--- a/iPython/Interactive VLF data miner.ipynb
+++ b/iPython/Interactive VLF data miner.ipynb
@@ -332,7 +332,7 @@
     "<img src=\"Ionogram.jpg\" />\n",
     "\n",
     "##### 3D ionospheric model\n",
-    "<img src=\"3D.jpg\"/>\n",
+    "<img src=\"http://extensa.emer.cz/hvezdarna/archive/OSTROV/2016/03/06/Vertical_distribution_date.jpg\"/>\n",
     "\n",
     "##### High-energy impact spectra\n",
     "<img src=\"HE.jpg\"/>"
