--- a/iPython/Interactive VLF data miner.ipynb
+++ b/iPython/Interactive VLF data miner.ipynb
@@ -326,16 +326,16 @@
    "source": [
     "If the graphs are printed, they will look as the following examples:\n",
     "##### VLF spectra\n",
-    "<img src=\"VLF_spectra.jpg\" />\n",
+    "<img src=\"http://extensa.emer.cz/hvezdarna/archive/OSTROV/2016/03/06/SID_model_date.jpg\" />\n",
     "\n",
     "##### Ionogram\n",
-    "<img src=\"Ionogram.jpg\" />\n",
+    "<img src=\"http://extensa.emer.cz/hvezdarna/archive/OSTROV/2016/03/06/Gradients_date.jpg\" />\n",
     "\n",
     "##### 3D ionospheric model\n",
     "<img src=\"http://extensa.emer.cz/hvezdarna/archive/OSTROV/2016/03/06/Vertical_distribution_date.jpg\"/>\n",
     "\n",
     "##### High-energy impact spectra\n",
-    "<img src=\"HE.jpg\"/>"
+    "<img src=\"http://extensa.emer.cz/hvezdarna/archive/OSTROV/2016/03/06/Meteoric_spectra_date.jpg\"/>"
    ]
   },
   {
