--- a/iPython/VLF data processor.ipynb
+++ b/iPython/VLF data processor.ipynb
@@ -206,7 +206,7 @@
     "i_avrg = (i_1+i_2)./2\n",
     "i_all = [i_1 i_1 i_avrg]\n",
     "save -hdf5 ionization_degree.h5 i_all\n",
-    "n_0 = 23400^2*epsilon*m_el/e^2\n",
+    "n_0 = nu.^2*epsilon*m_el/e^2\n",
     "N = n-n_0\n",
     "Bl = 1+(0.01.*L)\n",
     "mD = 10^-10\n",
@@ -412,7 +412,7 @@
     "i_avrg = (i_1+i_2)./2\n",
     "i_all = [i_1 i_1 i_avrg]\n",
     "save -hdf5 ionization_degree.h5 i_all\n",
-    "n_0 = 23400^2*epsilon*m_el/e^2\n",
+    "n_0 = nu.^2*epsilon*m_el/e^2\n",
     "N = n-n_0\n",
     "Bl = 1+(0.01.*L)\n",
     "mD = 10^-10\n",
@@ -619,7 +619,7 @@
     "i_avrg = (i_1+i_2)./2\n",
     "i_all = [i_1 i_1 i_avrg]\n",
     "save -hdf5 ionization_degree.h5 i_all\n",
-    "n_0 = 23400^2*epsilon*m_el/e^2\n",
+    "n_0 = nu.^2*epsilon*m_el/e^2\n",
     "N = n-n_0\n",
     "Bl = 1+(0.01.*L)\n",
     "mD = 10^-10\n",
@@ -825,7 +825,7 @@
     "i_avrg = (i_1+i_2)./2\n",
     "i_all = [i_1 i_1 i_avrg]\n",
     "save -hdf5 ionization_degree.h5 i_all\n",
-    "n_0 = 23400^2*epsilon*m_el/e^2\n",
+    "n_0 = nu.^2*epsilon*m_el/e^2\n",
     "N = n-n_0\n",
     "Bl = 1+(0.01.*L)\n",
     "mD = 10^-10\n",
