--- a/iPython/Interactive VLF data miner.ipynb
+++ b/iPython/Interactive VLF data miner.ipynb
@@ -105,8 +105,8 @@
     "t0 = data(1,:)\n",
     "stringt = (1:columns(t))\n",
     "t = (t0 + stept.*(stringt-1))'\n",
-    "t0 = ceil(H0./24.*rows(t))\n",
-    "t1 = floor(H1./24.*row(t))\n",
+    "t0 = ceil((H0+M0/60+S0/3600)./24.*rows(t))\n",
+    "t1 = floor((H1+M1/60+S1/3600)./24.*row(t))\n",
     "t = t(,t0:t1)\n",
     "nu0 = data(:,1)\n",
     "stringnu = ((1:rows(nu)))'\n",
