--- a/Python/VLF data overview.ipynb
+++ b/Python/VLF data overview.ipynb
@@ -36,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First of all, the essential modeules are imported."
+    "First of all, the essential modules are imported."
    ]
   },
   {
