FIX: postion arguments

--- a/Python/VLF data overview.ipynb
+++ b/Python/VLF data overview.ipynb
@@ -65,7 +65,7 @@
    },
    "outputs": [],
    "source": [
-    "data_file = download_file('http://data.astropy.org/tutorials/FITS-images/HorseHead.fits', cache=True )\n",
+    "data_file = download_file(url, cache=True )\n",
     "data_list = fits.open(data_file)\n",
     "data_list.info()\n",
     "data = data_list[0].data\n",
