--- a/Python/VLF data overview.ipynb
+++ b/Python/VLF data overview.ipynb
@@ -497,7 +497,7 @@
     "#### Ionogram\n",
     "    The next graph is the standard ionogram, a digram which shows the relation between the frequency (electron plasma frequency and thus mean electron density, respectively) and the height where the ionospheric plasma is being located. The ionogram involves both measured daa ad interpolaton.\n",
     "#### Charged particles\n",
-    "    As the result of plasma paramters modelling, a simple diagram showing the electron density and plasma temperature is given.\n",
+    "    As the result of plasma parameters modelling, a simple diagram showing the electron density and plasma temperature is given.\n",
     "#### Ionospheric drift\n",
     "    The last step of this data processing tool is the diagram which shows the ionospheric plasma distribution involving both vertical distribution and horizontal distribution; they both are able to be reached within the ionogram."
    ]
