--- a/Python/Interactive VLF data processor.ipynb
+++ b/Python/Interactive VLF data processor.ipynb
@@ -8,15 +8,22 @@
     "## Vojtěch Laitl 2016\n",
     "### Ionozor Measuring Network - VLF monitors data anylysis and graph processing\n",
     "\n",
-    "This is an iPython Juypter notebook made for SID monitors and interactive viewing of the processed VLF data. The computations are covered by a simplified ionospheric plasma physics model and based on iPython 2.X modules. The script does not save any pictures, nor data given. The supporting files are deleted when the calculations and plotting are finished, so the notebook works only with the primary data measured."
+    "This is an Juypter notebook made for SID monitors and interactive viewing of the processed VLF data. The computations are covered by a simplified ionospheric plasma physics model and based on Python modules. The script does not save any pictures, nor data given. The supporting files are deleted when the calculations and plotting are finished, so the notebook works only with the primary data measured."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Prerequisities\n",
+    "\n",
+    "    sudo apt-get install python3-matplotlib python3-numpy python3-scipy python3-astropy\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import bzpost\n",
@@ -49,17 +56,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e3eeda0fcbd942e3aa0a71e39d7b4e57",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/html": [
+       "<p>Failed to display Jupyter Widget of type <code>interactive</code>.</p>\n",
+       "<p>\n",
+       "  If you're reading this message in the Jupyter Notebook or JupyterLab Notebook, it may mean\n",
+       "  that the widgets JavaScript is still loading. If this message persists, it\n",
+       "  likely means that the widgets JavaScript library is either not installed or\n",
+       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
+       "  Widgets Documentation</a> for setup instructions.\n",
+       "</p>\n",
+       "<p>\n",
+       "  If you're reading this message in another frontend (for example, a static\n",
+       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
+       "  it may mean that your frontend doesn't currently support widgets.\n",
+       "</p>\n"
+      ],
+      "text/plain": [
+       "interactive(children=(Dropdown(description='station', options=('svakov/R2', 'OBSUPICE/R2'), value='svakov/R2'), Output()), _dom_classes=('widget-interact',))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "output_slider_variable = widgets.Text()\n",
+    "output_slider_variable = widgets.Text(\n",
+    "    value='Hello World',\n",
+    "    placeholder='Type something',\n",
+    "    description='String:',\n",
+    "    disabled=False)\n",
     "def f(station):\n",
     "    output_slider_variable.value = str(station)\n",
     "\n",
-    "interact(f,station=('svakov/R2','OBSUPICE/R2'));"
+    "interact(f,station=['svakov/R2','OBSUPICE/R2']);"
    ]
   },
   {
@@ -71,17 +110,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "OBSUPICE/R2\n",
-      "http://space.astro.cz/ionozor/VLF/OBSUPICE/OBSUPICE_VLF_R2/\n"
+      "Your observatory and source URL are\n",
+      "svakov/R2\n",
+      "http://space.astro.cz/ionozor/VLF/svakov/SVAKOV_VLF_R2/\n"
      ]
     }
    ],
@@ -99,37 +137,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, your choice is converted into iPython-friendly format. If successfully done, you will be informed by an output printed."
+    "Next, your choice is converted into Python friendly format. If successfully done, you will be informed by an output printed."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Let us start! Please set your request for the initial time to download your .fits file.\n"
+     ]
+    }
+   ],
    "source": [
     "output_slider_variable1 = widgets.Text()\n",
     "def f(year):\n",
     "    output_slider_variable1.value = str(year)    \n",
-    "interact(f,year='text')\n",
+    "interact(f,year='2017')\n",
     "output_slider_variable2 = widgets.Text()\n",
     "def f(month):\n",
     "    output_slider_variable2.value = str(month)    \n",
-    "interact(f,month='text')\n",
+    "interact(f,month='04')\n",
     "output_slider_variable3 = widgets.Text()\n",
     "def f(day):\n",
     "    output_slider_variable3.value = str(day)    \n",
-    "interact(f,day='text')\n",
+    "interact(f,day='02')\n",
     "output_slider_variable4 = widgets.Text()\n",
     "def f(hour):\n",
     "    output_slider_variable4.value = str(hour)    \n",
-    "interact(f,hour='text')\n",
+    "interact(f,hour='18')\n",
     "output_slider_variable5 = widgets.Text()\n",
     "def f(minute):\n",
     "    output_slider_variable5.value = str(minute)    \n",
-    "interact(f,minute='text')\n",
+    "interact(f,minute='30')\n",
     "print('Let us start! Please set your request for the initial time to download your .fits file.')"
    ]
   },
@@ -142,17 +186,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "The initial time conditions are given by the array\n",
-      "2016 9 9 11 1\n"
+      "2017 4 2 18 30\n"
      ]
     }
    ],
@@ -175,49 +217,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Thank you, let us carry on! Please set your request for the terminal time to download your .fits file.\n"
+     ]
+    }
+   ],
    "source": [
     "output_slider_variable6 = widgets.Text()\n",
     "def f(year):\n",
     "    output_slider_variable6.value = str(year)    \n",
-    "interact(f,year='text')\n",
+    "interact(f,year='2017')\n",
     "output_slider_variable7 = widgets.Text()\n",
     "def f(month):\n",
     "    output_slider_variable7.value = str(month)    \n",
-    "interact(f,month='text')\n",
+    "interact(f,month='04')\n",
     "output_slider_variable8 = widgets.Text()\n",
     "def f(day):\n",
     "    output_slider_variable8.value = str(day)    \n",
-    "interact(f,day='text')\n",
+    "interact(f,day='02')\n",
     "output_slider_variable9 = widgets.Text()\n",
     "def f(hour):\n",
     "    output_slider_variable9.value = str(hour)    \n",
-    "interact(f,hour='text')\n",
+    "interact(f,hour='18')\n",
     "print('Let us start! Please set your request for the initial time to download your .fits file.')\n",
     "output_slider_variable10 = widgets.Text()\n",
     "def f(minute):\n",
     "    output_slider_variable10.value = str(minute)    \n",
-    "interact(f,minute='text')\n",
+    "interact(f,minute='30')\n",
     "print('Thank you, let us carry on! Please set your request for the terminal time to download your .fits file.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 31,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "The terminal time conditions are given by the array\n",
-      "2017 10 10 1 59\n"
+      "2017 4 2 18 30\n"
      ]
     }
    ],
@@ -240,11 +286,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['http:',\n",
+       " '',\n",
+       " 'space.astro.cz',\n",
+       " 'ionozor',\n",
+       " 'VLF',\n",
+       " 'svakov',\n",
+       " 'SVAKOV_VLF_R2',\n",
+       " '']"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def download_file(url):\n",
     "    local_filename = url.split('/')\n",
@@ -269,11 +331,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'function' object has no attribute 'urlparse'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-33-2c2a872e7417>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     23\u001b[0m     \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwd\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m \u001b[0mdownload_fits\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'snapshots'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0myear_start\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmonth_start\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mday_start\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhour_start\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mminute_start\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0myear_end\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmonth_end\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mday_end\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhour_end\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mminute_end\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'The directory and datetime are given by:'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'snapshots'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0myear_start\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmonth_start\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mday_start\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhour_start\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mminute_start\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0myear_end\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmonth_end\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mday_end\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhour_end\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mminute_end\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-33-2c2a872e7417>\u001b[0m in \u001b[0;36mdownload_fits\u001b[0;34m(dir, year_start, month_start, day_start, hour_start, minute_start, year_end, month_end, day_end, hour_end, minute_end)\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmakedirs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m     \u001b[0mcon\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbzpost\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mHTTPConnector\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msourceUrl\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m     \u001b[0mcon\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconnect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/repos/bolidozor/python-bolidozor-postprocessing/src/bzpost/__init__.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, base_url, station_name)\u001b[0m\n\u001b[1;32m    102\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstation_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstation_name\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    103\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 104\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparsed_url\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0murlparse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0murlparse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbase_url\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    105\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    106\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconnection\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'function' object has no attribute 'urlparse'"
+     ]
+    }
+   ],
    "source": [
     "def download_fits(dir, year_start, month_start, day_start, hour_start, minute_start, year_end, month_end, day_end, hour_end, minute_end):\n",
     "    '''\n",
@@ -314,9 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def mkmosaic(dir, output='out.fits', axis='y', part=1, showplot=True):\n",
@@ -365,9 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "data_list = fits.open('out.fits')\n",
@@ -386,9 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "epsilon = 8.8542e-12\n",
@@ -418,9 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "nu = 18000+(16+2/3)*np.arange(0,len(data))\n",
@@ -469,9 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "n_mean = np.mean(n,axis=1)\n",
@@ -496,9 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fig1 = plt.figure()\n",
@@ -541,9 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plt.show()"
@@ -572,9 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "os.remove('out.fits')\n",
